@@ -3,6 +3,7 @@ package fr.network.exam.exo1;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.nio.ByteBuffer;
+import java.nio.channels.AsynchronousCloseException;
 import java.nio.channels.DatagramChannel;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
@@ -11,8 +12,9 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Objects;
+import java.util.concurrent.ArrayBlockingQueue;
+import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
 
 import static java.nio.file.StandardOpenOption.*;
 
@@ -21,8 +23,10 @@ public class ClientAuthFull {
     private static final Charset UTF8 = StandardCharsets.UTF_8;
     private static final Charset ISO_8859 = StandardCharsets.ISO_8859_1;
     private static final Logger logger = Logger.getLogger(ClientAuth.class.getName());
-    private static final int BUF_SIZE = 1024;
+
+    private static final ByteBuffer buffer = ByteBuffer.allocate(1024);
     private static final int MIN_BUF = Long.BYTES + Integer.BYTES * 2;
+    private static final int TIMEOUT = 300;
 
     private record User(String firstName, String lastName) {
         public User {
@@ -36,23 +40,6 @@ public class ClientAuthFull {
                 throw new IllegalArgumentException("Invalid line : " + line);
             }
             return new User(t[0], t[1]);
-        }
-
-        public ByteBuffer encode(long id) {
-            var buf = ByteBuffer.allocate(BUF_SIZE);
-            var firstNameBuf = UTF8.encode(firstName);
-            var lastNameBuf = UTF8.encode(lastName);
-
-            // id
-            buf.putLong(id);
-            // firstname
-            buf.putInt(firstNameBuf.remaining());
-            buf.put(firstNameBuf);
-            // lastName
-            buf.putInt(lastNameBuf.remaining());
-            buf.put(lastNameBuf);
-
-            return buf;
         }
     }
 
@@ -78,58 +65,83 @@ public class ClientAuthFull {
             // Read all lines of inFilename opened in UTF-8
             var lines = Files.readAllLines(Path.of(inFilename), UTF8);
             // Create the list of all users
-            var users = lines.stream().map(User::fromLine).collect(Collectors.toList());
+            var users = lines.stream().map(User::fromLine).toList();
             // List of lines to write to the output file
             var answers = new ArrayList<String>();
+            // queue of answer
+            var queue = new ArrayBlockingQueue<String>(10);
 
-            for (int i = 0; i < users.size(); i++) {
-                // send request to server
-                dc.send(users.get(i).encode(i).flip(), server);
-            }
+            // Listener thread receive packets
+            Thread.ofPlatform().start(() -> {
+                while (true) {
+                    try {
+                        dc.receive(buffer);
 
-            var parts = new String[4];
-            var buf = ByteBuffer.allocate(BUF_SIZE);
-            // receive the response from the server
-            for (var user : users) {
-                parts[0] = user.firstName;
-                parts[1] = user.lastName;
-                buf.clear();
-                dc.receive(buf);
-                buf.flip();
-                if (buf.remaining() < MIN_BUF) {
-                    logger.warning("Mal formed packet from the server");
-                    System.out.println("min size");
+                        buffer.flip();
+                        // size verification
+                        if (buffer.remaining() < MIN_BUF) {
+                            logger.warning("Ill formed packet.");
+                            continue;
+                        }
+                        long id = buffer.getLong();
+                        var user = users.get(Math.toIntExact(id));
+
+                        int usernameSize = buffer.getInt(); // username Bytes size
+                        if (buffer.remaining() < usernameSize) {
+                            logger.warning("Mal formed packet");
+                            continue;
+                        }
+                        var usernameBytes = buffer.slice(buffer.position(), usernameSize);
+                        buffer.position(buffer.position() + usernameSize); // put the position in right place
+                        // ============================
+                        int passwdSize = buffer.getInt(); // passwd Bytes size
+                        if (buffer.remaining() < passwdSize) {
+                            logger.warning("Mal formed packet");
+                            continue;
+                        }
+                        var passwdBytes = buffer.slice(buffer.position(), passwdSize);
+                        buffer.position(buffer.position() + passwdSize); // put the position in right place
+                        // ================================
+
+                        buffer.clear();
+                        var answer = String.format("%s;%s;%s;%s", user.firstName, user.lastName, ISO_8859.decode(usernameBytes), ISO_8859.decode(passwdBytes));
+
+                        queue.put(answer);
+                    } catch (InterruptedException e) {
+                        throw new AssertionError(e);
+                    } catch (AsynchronousCloseException e) {
+                        logger.info("Listener is closed");
+                        break;
+                    } catch (IOException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+            });
+
+            // Send request
+            for (int id = 0; id < users.size(); id++) {
+                var user = users.get(id);
+                var firstnameBytes = UTF8.encode(user.firstName);
+                var lastnameBytes = UTF8.encode(user.lastName);
+
+                buffer.clear(); // clearing the buffer
+
+                buffer.putLong(id); // id
+                buffer.putInt(firstnameBytes.remaining()); // size of firstname bytes
+                buffer.put(firstnameBytes); // firstname bytes
+                buffer.putInt(lastnameBytes.remaining()); // size of lastname bytes
+                buffer.put(lastnameBytes); // lastname bytes
+                buffer.flip();
+
+                dc.send(buffer, server);
+                buffer.clear();
+
+                var answer = queue.poll(TIMEOUT, TimeUnit.MILLISECONDS);
+                if (answer == null) {
+                    logger.warning("Server didn't respond in time or packet is lost");
                     continue;
                 }
-
-                // get id
-                long id = buf.getLong();
-
-                // get username
-                int usernameByteSize = buf.getInt();
-                if (buf.remaining() < usernameByteSize || usernameByteSize < 0) {
-                    logger.warning("Mal formed packet from the server");
-                    continue;
-                }
-                var usernameBytes = buf.slice(buf.position(), usernameByteSize);
-                buf.position(buf.position() + usernameByteSize);
-                var username = ISO_8859.decode(usernameBytes).toString();
-                parts[2] = username;
-
-                // get password
-                int passwordByteSize = buf.getInt();
-                if (buf.remaining() < passwordByteSize || passwordByteSize < 0) {
-                    logger.warning("Mal formed packet from the server");
-                    continue;
-                }
-                var passwordBytes = buf.slice(buf.position(), passwordByteSize);
-                buf.position(buf.position() + passwordByteSize);
-                var password = ISO_8859.decode(passwordBytes).toString();
-                parts[3] = password;
-
-                // build response
-                var res = String.join(";", parts);
-                answers.add(res);
+                answers.add(answer);
             }
 
             Files.write(Paths.get(outFilename), answers, UTF8, CREATE, WRITE, TRUNCATE_EXISTING);
